# Learning_SoC_Preconditioning

./: .gitignore  COMPLETION_SUMMARY.md  FIX_PREDEFINED_C.py  ISSUE_training_stagnation.md  MIGRATION.md  OVERVIEW.md  QUICKSTART.md  README.md  STRUCTURE.md  SUMMARY.md  claims.txt  debug_c_matrix.py  debug_c_matrix2.py  main.py  pyproject.toml  requirements.txt  test_sampling_grad.py  test_solvers.py
case_studies/: README.md
case_studies/configs/: study_1_anisotropic.yaml  study_2_elasticity.yaml  test_diagnostics.yaml
configs/data/: anisotropic_default.yaml
configs/evaluation/: challenging.yaml  default.yaml  generalization.yaml  quick.yaml  stress_test.yaml
configs/model/: gat_default.yaml
configs/training/: reinforce_default.yaml
docs/: ARCHITECTURE.md  FAST_SPECTRAL_ANALYSIS.md  QUICK_REFERENCE.md  RANDOM_BASELINE_ANALYSIS.md  UNDERSTANDING_B.md  WHY_FINE_LEVEL_MATTERS.md
examples/: demo_modules.py
results/evaluation/: comparison_table.md  evaluation_results.yaml
scripts/: compare_c_methods.py  debug_random_vs_trained.py  evaluate.py  plot_results.py  run_case_study.py  test_random_c.py  train.py  visualize_diagnostics.py
src/p_sparsity/: __init__.py  legacy.py
src/p_sparsity/case_studies/: __init__.py  config.py  eda.py  generators.py  metrics.py  param_registry.py  runner.py  visualization.py
src/p_sparsity/data/: __init__.py  base.py  dataset.py  registry.py  smooth_errors.py
src/p_sparsity/evaluation/: __init__.py  (+3 more)
suite_sparse_data/: 1138_bus.tar
suite_sparse_data/1138_bus/: 1138_bus.txt
tests/: test_adaptive_entropy.py
(+343 files in other folders)
